crates/math-core/tests/snapshots/conversion_test__greek_letter_tf.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\Gamma\\varGamma\\boldsymbol{\\Gamma\\varGamma}"
---
<math>
    <mpadded><mi mathvariant="normal">Γ</mi></mpadded>
    <mi>Γ</mi>
    <mi>𝚪𝜞</mi>
</math>
