crates/math-core/tests/snapshots/conversion_test__greek_letters.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\phi/\\varphi"
---
<math>
    <mi>ϕ</mi>
    <mi>/</mi>
    <mi>φ</mi>
</math>
