crates/math-core/tests/snapshots/conversion_test__hphantom.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\sqrt{\\hphantom{x}y}"
---
<math>
    <msqrt>
        <mrow>
            <mpadded height="0">
                <mphantom>
                    <mi>x</mi>
                </mphantom>
            </mpadded>
            <mi>y</mi>
        </mrow>
    </msqrt>
</math>
