crates/math-core/tests/snapshots/conversion_test__hskip.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x\\hskip1em y"
---
<math>
    <mi>x</mi>
    <mspace width="1em"/>
    <mi>y</mi>
</math>
