crates/math-core/tests/snapshots/conversion_test__idotsint.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x \\idotsint ="
---
<math>
    <mi>x</mi>
    <mo>∫</mo>
    <mo lspace="0">·</mo>
    <mo lspace="0" rspace="0.1667em">·</mo>
    <mo lspace="0">·</mo>
    <mo lspace="0" rspace="0">∫</mo>
    <mo rspace="0">=</mo>
</math>
