crates/math-core/tests/snapshots/conversion_test__idotsint_with_limits.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\idotsint\\limits_0^1 xy"
---
<math>
    <mo lspace="0">∫</mo>
    <mo lspace="0">·</mo>
    <mo lspace="0" rspace="0.1667em">·</mo>
    <mo lspace="0">·</mo>
    <munderover>
        <mo lspace="0">∫</mo>
        <mn>0</mn>
        <mn>1</mn>
    </munderover>
    <mi>x</mi>
    <mi>y</mi>
</math>
