crates/math-core/tests/snapshots/conversion_test__infix_double_bar.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x \\| y"
---
<math>
    <mi>x</mi>
    <mo stretchy="false" lspace="0" rspace="0">‖</mo>
    <mi>y</mi>
</math>
